; ModuleID = '/home/carl/AnghaBench/TDengine/src/util/src/extr_tcompression.c_tsDecompressTinyint.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/util/src/extr_tcompression.c_tsDecompressTinyint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ONE_STAGE_COMP = common dso_local global i8 0, align 1
@TSDB_DATA_TYPE_TINYINT = common dso_local global i32 0, align 4
@TWO_STAGE_COMP = common dso_local global i8 0, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tsDecompressTinyint(i8* %0, i32 %1, i32 %2, i8* %3, i32 %4, i8 signext %5, i8* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i8, align 1
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  store i8* %0, i8** %10, align 8
  store i32 %1, i32* %11, align 4
  store i32 %2, i32* %12, align 4
  store i8* %3, i8** %13, align 8
  store i32 %4, i32* %14, align 4
  store i8 %5, i8* %15, align 1
  store i8* %6, i8** %16, align 8
  store i32 %7, i32* %17, align 4
  %18 = load i8, i8* %15, align 1
  %19 = sext i8 %18 to i32
  %20 = load i8, i8* @ONE_STAGE_COMP, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %19, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %8
  %24 = load i8*, i8** %10, align 8
  %25 = load i32, i32* %12, align 4
  %26 = load i8*, i8** %13, align 8
  %27 = load i32, i32* @TSDB_DATA_TYPE_TINYINT, align 4
  %28 = call i32 @tsDecompressINTImp(i8* %24, i32 %25, i8* %26, i32 %27)
  store i32 %28, i32* %9, align 4
  br label %49

29:                                               ; preds = %8
  %30 = load i8, i8* %15, align 1
  %31 = sext i8 %30 to i32
  %32 = load i8, i8* @TWO_STAGE_COMP, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp eq i32 %31, %33
  br i1 %34, label %35, label %46

35:                                               ; preds = %29
  %36 = load i8*, i8** %10, align 8
  %37 = load i32, i32* %11, align 4
  %38 = load i8*, i8** %16, align 8
  %39 = load i32, i32* %17, align 4
  %40 = call i32 @tsDecompressStringImp(i8* %36, i32 %37, i8* %38, i32 %39)
  %41 = load i8*, i8** %16, align 8
  %42 = load i32, i32* %12, align 4
  %43 = load i8*, i8** %13, align 8
  %44 = load i32, i32* @TSDB_DATA_TYPE_TINYINT, align 4
  %45 = call i32 @tsDecompressINTImp(i8* %41, i32 %42, i8* %43, i32 %44)
  store i32 %45, i32* %9, align 4
  br label %49

46:                                               ; preds = %29
  %47 = call i32 @assert(i32 0)
  br label %48

48:                                               ; preds = %46
  br label %49

49:                                               ; preds = %23, %35, %48
  %50 = load i32, i32* %9, align 4
  ret i32 %50
}

declare dso_local i32 @tsDecompressINTImp(i8*, i32, i8*, i32) #1

declare dso_local i32 @tsDecompressStringImp(i8*, i32, i8*, i32) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
